--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,8 @@
             "type": "java",
             "name": "CodeLens (Launch) - Game",
             "request": "launch",
-            "mainClass": "Game"
+            "mainClass": "Game",
+            "projectName": "TestJava"
         }
     ]
 }
